--- a/style.css
+++ b/style.css
@@ -216,7 +216,11 @@ a#logo:hover {
 	margin-bottom: 65px;
 }
 
-.portfolioitem {
+#work img {
+	max-width: 100%;
+  } 
+
+.portfolio-item {
 	position: relative;
 	float: left;
 	margin-bottom: 15px;
@@ -227,15 +231,15 @@ a#logo:hover {
 	transition:all .2s ease-out, background 0.5s ease-in;
 }
 
-.portfolioitem a {
+.portfolio-item a {
 	opacity: 1;
 }
 
-.portfolioitem img {
+.portfolio-item img {
 	opacity: 1;
 }
 
-.portfolioitem:hover .overlay {
+.portfolio-item:hover .overlay {
 	opacity: 0.94;
 }
 
